# ekf_sensor_fusion

./: .gitignore
matlab_gen/jar/: ethzasl_sensor_fusion-0.1.0.md5  sensor_fusion_comm-0.1.0.md5  ssf_core-0.1.0.md5  ssf_updates-0.1.0.md5
matlab_gen/msggen/+robotics/+ros/+custom/+msggen/: CustomMsgConsts.m
matlab_gen/msggen/+robotics/+ros/+custom/+msggen/+sensor_fusion_comm/: DoubleArrayStamped.m  ExtEkf.m  ExtState.m
matlab_gen/msggen/+robotics/+ros/+custom/+msggen/+ssf_core/: ext_imu.m  visensor_imu.m
matlab_gen/msggen/+robotics/+ros/+custom/+msggen/+ssf_updates/: PositionWithCovarianceStamped.m
sensor_fusion_comm/: CMakeLists.txt  package.xml
sensor_fusion_comm/msg/: DoubleArrayStamped.msg
ssf_core/: CMakeLists.txt  package.xml
ssf_core/cfg/: SSF_Core.cfg
ssf_core/include/ssf_core/: SSF_Core.h  eigen_utils.h  measurement.h  state.h
ssf_core/msg/: ext_ekf.msg
ssf_core/src/: SSF_Core.cpp  calcQ.h  measurement.cpp  state.cpp
ssf_updates/: CMakeLists.txt  package.xml  viconpose_sensor_fix.yaml  visionpose_sensor_fix.yaml  visionpose_sensor_fix_arena_glass.yaml  visionpose_sensor_fix_ddrone.yaml
ssf_updates/launch/: viconpose_sensor.launch  visionpose_sensor.launch  visionpose_sensor_arena_glass.launch  visionpose_sensor_ddrone.launch
ssf_updates/matlab/: matlab_results_state_out.m  record_matlab.sh  state_visualiser.m
ssf_updates/src/: main.cpp  position_measurements.h  viconpose_measurements.h  viconpose_sensor.cpp  viconpose_sensor.h  visionpose_measurements.h  visionpose_sensor.cpp  visionpose_sensor.h
visualisation/: ekf_vo_compare.py
